--- a/findly-builder/src/app/components/structured-data/structured-data.component.scss
+++ b/findly-builder/src/app/components/structured-data/structured-data.component.scss
@@ -118,10 +118,10 @@
                     border-radius: 4px;
                     padding: 3px 6px;
                     font-weight: 500;
-                    font-size: 10px;
+                    font-size: 12px;
                     line-height: 12px;
                     color: #3C4043;
-                    text-transform: uppercase;
+                    // text-transform: uppercase;
                     display: inline-block;
                     margin-right: 6px;
                 }
@@ -247,7 +247,7 @@
                     padding: 7px 0;
                     .default-key{
                         color: #9AA0A6;
-                        text-transform: uppercase;
+                        // text-transform: uppercase;
                         font-weight: 500;
                         font-size: 12px;
                         // line-height: 14px;
