FLY-802 partially fixes for point 1,2,3 & 6

--- a/findly-builder/src/app/components/business-rules/business-rules.component.html
+++ b/findly-builder/src/app/components/business-rules/business-rules.component.html
@@ -269,8 +269,11 @@
                           <ng-container *ngIf="ruleObj.value && ruleObj.value.length && (ruleObj.dataType === 'number')">
                             <ng-container *ngFor="let value of ruleObj.value; let index = index">
                               <mat-chip [selectable]="selectable" (removed)="removeTag(ruleObj.value, tag)">
-                                <span class="mat-val" *ngIf="value && value.length">
+                                <span class="mat-val" *ngIf="value && value.length && ruleObj.operator == 'between'">
                                   <span *ngFor="let num of value; let numIndex = index">{{num}}<span *ngIf="!numIndex"> - </span></span>
+                                </span>
+                                <span class="mat-val" *ngIf="value && ruleObj.operator !== 'between'">
+                                  <span >{{value}}</span>
                                 </span>
                                 <mat-icon matChipRemove><img src="assets/images/close.svg"/></mat-icon>
                               </mat-chip>
@@ -291,8 +294,9 @@
                           <ng-container *ngFor="let value of ruleObj.value; let index = index">
                             <mat-chip [selectable]="selectable" (removed)="removeTag(ruleObj.value, tag)">
                               <span class="mat-val" *ngIf="value && value.length">
-                                <span *ngFor="let date of value; let dateIndex = index"></span>
-                                {{date | dateFormatPipe: 'DD MMM YYYY'}} <span *ngIf="!dateIndex"> - </span> 
+                                <span *ngFor="let date of value; let dateIndex = index">
+                                  {{date | dateFormatPipe: 'DD MMM YYYY'}} <span *ngIf="!dateIndex"> - </span> 
+                                </span>
                               </span>
                               <mat-icon matChipRemove><img src="assets/images/close.svg"/></mat-icon>
                             </mat-chip>
@@ -316,11 +320,11 @@
                           </ng-container>
 
                           <ng-container *ngIf="ruleObj.dataType == 'number'">
-                                 <input  placeholder="Eg: 120-220" [matChipInputFor]="chipList" [matChipInputSeparatorKeyCodes]="separatorKeysCodes" (matChipInputTokenEnd)="addRules($event, ruleObj, i)"/>
-                          </ng-container>                          
+                              <input  [placeholder]="ruleObj.operator == 'between' ? 'Eg: 120-220' : 'Type Keyword'" [matChipInputFor]="chipList" [matChipInputSeparatorKeyCodes]="separatorKeysCodes" (matChipInputTokenEnd)="addRules($event, ruleObj, i)"/>
+                          </ng-container>                       
                         </mat-chip-list>
                       </mat-form-field>
-                      <ng-container *ngIf="ruleObj.dataType == 'number'">
+                      <ng-container *ngIf="ruleObj.dataType == 'number'  && ruleObj.operator == 'between'">
                         <div class="info-number-placeholder"><img src="assets/icons/business-rules/info.svg" class="mr-1">Range separated by ‘ - ‘</div>
                       </ng-container>
                     </div>
@@ -440,11 +444,11 @@
                           </ng-container>
                           <input #contextSuggestedImput [placeholder]="'Type and Press Enter'" (click)='buildCurrentContextSuggetions(outcomeObj)' [(ngModel)]="outcomeObj.newValue"  (keyup)='buildCurrentContextSuggetions(outcomeObj)' [matChipInputFor]="chipList"  [matAutocomplete]="auto" [matChipInputSeparatorKeyCodes]="separatorKeysCodes" (matChipInputTokenEnd)="addOutcome($event, outcomeObj, i)"/>
                         </mat-chip-list>
-                        <mat-autocomplete #auto="matAutocomplete" class="mat_autofocus_dropdown" (optionSelected)="selected($event,outcomeObj,index)">
-                          <mat-option *ngFor="let suggesion of currentSugg">
-                            {{suggesion}}
-                          </mat-option>
-                        </mat-autocomplete>
+                          <mat-autocomplete #auto="matAutocomplete" class="mat_autofocus_dropdown" (optionSelected)="selected($event,outcomeObj,index)">
+                              <mat-option *ngFor="let suggesion of currentSugg">
+                                {{suggesion}}
+                              </mat-option>
+                          </mat-autocomplete>
                       </mat-form-field>
                     </div>
                   </div>
