--- a/findly-builder/src/app/components/bot-action/bot-action.component.html
+++ b/findly-builder/src/app/components/bot-action/bot-action.component.html
@@ -173,8 +173,8 @@
     <div  class="empty-landing-screen">
       <div class="img-block" *ngIf="!emptyItems"><img class="action_icon" src="assets/images/botactions-empty.svg"></div>
       <ng-container >
-          <div class="empty-title">You haven’t added any synonyms data yet!</div>
-          <div class="desc-text"> Synonyms are a set of equivalent words that are considered to expand search queries to improve findability. SearchAssist allows you to define synonym & one-way synonym.
+          <div class="empty-title">You haven’t linked any bot yet!</div>
+          <div class="desc-text"> Bot Actions are a list of tasks that are performed by the bots. SearchAssist allows you to link bots that can perform tasks for the search user.
           </div>
           <div class="kr-sg-dropdowns" ngbDropdown [container]="'body'">                                         
               <div class="dropdown dropdown-open">
