--- a/findly-builder/src/app/components/field-management/field-management.component.scss
+++ b/findly-builder/src/app/components/field-management/field-management.component.scss
@@ -27,19 +27,16 @@
         .seach_add_feild{
             display: flex;
             align-items: center;
-            justify-content: flex-end;
-            padding: 17px 18px;
+            justify-content: space-between;
+            padding: 17px 24px;
             margin: 0px 0px 10px 0px;
             background: #F5F8FA;
             border-radius: 4px;
-            .title{
-                left: 277px;
+            .title{               
                 font-weight: 500;
                 font-size: 18px;
                 line-height: 22px;
-                color: #000000;
-                position: absolute;
-                display: block;     
+                color: #000000;                            
             }  
             .kr-sg-input-search{
                 display: inline-block;
@@ -81,6 +78,7 @@
         }
         .table_data_content{
             padding: 0 24px;
+            text-align: left;
             .table_header{
                 padding: 18px 15px;
                 border-bottom: 1px solid #E4E5E7;
@@ -96,6 +94,7 @@
             }
             .table_body_content{
                 height: calc(100vh - 183px);
+                text-align: left;
                 .table_body{
                     padding: 18px 15px;
                     box-shadow: inset 0px -1px 0px #E4E5E7;                        
