--- a/findly-builder/src/app/scss/styles.scss
+++ b/findly-builder/src/app/scss/styles.scss
@@ -2117,6 +2117,11 @@ nouislider{
         margin-left: 20px !important;
         .CodeMirror-gutter-wrapper{
             left: -35px !important;
+            .CodeMirror-linenumber::before{
+                position: absolute;
+                content: ".";
+                right: 11px;
+            }
         }
     }
 }
