--- a/findly-builder/src/app/components/structured-data/structured-data.component.html
+++ b/findly-builder/src/app/components/structured-data/structured-data.component.html
@@ -23,7 +23,6 @@
     </div> 
     <perfect-scrollbar class="structured-data-scroll" [ngClass]="{'adjust-height': noItems}">
         <div *ngIf="!isLoading">
-            <ng-container *ngIf="structuredDataItemsList.length">
                 <div class="structured-data-table-sec">
                     <!-- Commented for now -->
                     <!-- <div class="toast-block-blue row m-0 align-items-center">
@@ -37,14 +36,14 @@
                         <div class="filter-sec text-left mb-1 col-8 p-0">
                             <ng-container *ngIf="(appliedAdvancedSearch.rules && appliedAdvancedSearch.rules.length)">
                                 <ng-container *ngFor="let rule of appliedAdvancedSearch.rules; let index = index">
-                                    <span class="if-text">IF</span> 
+                                    <span class="if-text" *ngIf="index === 0">IF</span> 
                                     <span class="filter_text">                                    
                                         <span class="rule-fieldname">{{rule.fieldName}}</span> 
-                                        <span class="rule-operator">{{rule.operator}}</span> 
+                                        <span class="rule-operator">{{returnOperator(rule.operator)}}</span> 
                                         <span class="rule-value" *ngIf="rule.value" >{{rule.value}}</span>                                     
                                         <img (click)="removeAdvancedSearchRule(index)" src="assets/icons/structured-data/close-filter.svg">
                                     </span> 
-                                    <span class="and" *ngIf="index !== (appliedAdvancedSearch.rules.length - 1)">AND</span>
+                                    <span class="and" *ngIf="index !== (appliedAdvancedSearch.rules.length - 1)">{{appliedAdvancedSearch.operand}}</span>
                                 </ng-container>
                                 <span class="ml-3 filter-title" (click)="openAdvancedSearch()">{{'structuredData.editFilter' | translate}}</span>
                             </ng-container>
@@ -54,72 +53,73 @@
                             <button id="btn_change_view_structured_data" class="kr-sg-button-secondary btn_lg ml-2" (click)="defaultView = !defaultView">{{ defaultView ? ('structuredData.switch_to_json' | translate) : ('structuredData.switch_to_default' | translate)}}</button>                            
                         </div>                        
                     </div>
-                    <div class="structured-data" *ngFor="let data of structuredDataItemsList;let d_index = index">
-                            <div class="kr-sg-checkbox d-block" [ngClass]="{'isChecked' : data.isChecked}">
-                                <input id="checkbox_drp{{d_index}}" (click)="selectData(data, d_index)" [checked]="data.isChecked" class="checkbox-custom" type="checkbox">
-                                <label for="checkbox_drp{{d_index}}" class="checkbox-custom-label"></label>
-                            </div>
-                            <ng-container *ngIf="!defaultView">
-                                <div class="data-content">
-                                    <!-- <pre>{{data._source.parsedData}}</pre> -->
-                                    <ngx-codemirror #codemirror name="jsonEditor" [options]="codeMirrorOptions" [(ngModel)]="data.parsedData"></ngx-codemirror>
-                                    <span class="ml-3 view-json" *ngIf="data.objectLength > 5" (click)="editJson(data)">{{'structuredData.viewJson' | translate}}</span>
+                <ng-container *ngIf="structuredDataItemsList.length">
+                        <div class="structured-data" *ngFor="let data of structuredDataItemsList;let d_index = index">
+                                <div class="kr-sg-checkbox d-block" [ngClass]="{'isChecked' : data.isChecked}">
+                                    <input id="checkbox_drp{{d_index}}" (click)="selectData(data, d_index)" [checked]="data.isChecked" class="checkbox-custom" type="checkbox">
+                                    <label for="checkbox_drp{{d_index}}" class="checkbox-custom-label"></label>
                                 </div>
-                            </ng-container>
-                            <ng-container *ngIf="defaultView">
-                                <div class="data-content defaultView">                                                                    
-                                    <div class="default-body">
-                                        <div class="row m-0 default-row col-12" [ngClass]="{'align-items-start':objectValue.nested}" *ngFor="let objectValue of data.objectValues; let v_index = index">
-                                            <div class="col-1 p-0 default-key text-truncate" title="{{ objectValue.key }}">{{ objectValue.key }}</div>
-                                            <div class="col-11 pr-0 default-value text-truncate" *ngIf="!objectValue.nested" title="{{ objectValue.value }}">{{ objectValue.value }}</div>
-                                            <div class="col-11 pr-0 default-value align-items-start text-truncate" *ngIf="objectValue.nested">                                                                                   
-                                               <div class="d-flex align-items-start text-truncate">
-                                                <img class="pointer mr-2 mt-1" (click)="objectValue.expanded = !objectValue.expanded" *ngIf="objectValue.nested && !objectValue.expanded" src="assets/icons/structured-data/carrot-right.svg">
-                                                <img class="pointer mr-2 mt-1" *ngIf="objectValue.nested && objectValue.expanded" (click)="objectValue.expanded = !objectValue.expanded" src="assets/icons/structured-data/carrot-down.svg">
-                                                <pre *ngIf="objectValue.nested && objectValue.expanded">{{ objectValue.expandedValue | json }}</pre> 
-                                                <div *ngIf="objectValue.nested && !objectValue.expanded" class="text-truncate">{{ objectValue.value }}</div>
-                                               </div>                                            
-                                            </div>                                        
-                                        </div>
+                                <ng-container *ngIf="!defaultView">
+                                    <div class="data-content">
+                                        <!-- <pre>{{data._source.parsedData}}</pre> -->
+                                        <ngx-codemirror #codemirror name="jsonEditor" [options]="codeMirrorOptions" [(ngModel)]="data.parsedData"></ngx-codemirror>
+                                        <span class="ml-3 view-json" *ngIf="data.objectLength > 5" (click)="editJson(data)">{{'structuredData.viewJson' | translate}}</span>
                                     </div>
-                                    <div class="mt-2 view-json col-12 p-0" *ngIf="data.objectLength > 5" (click)="editJson(data)">{{'structuredData.seeMore' | translate}}</div>
-                                   
+                                </ng-container>
+                                <ng-container *ngIf="defaultView">
+                                    <div class="data-content defaultView">                                                                    
+                                        <div class="default-body">
+                                            <div class="row m-0 default-row col-12" [ngClass]="{'align-items-start':objectValue.nested}" *ngFor="let objectValue of data.objectValues; let v_index = index">
+                                                <div class="col-1 p-0 default-key text-truncate" title="{{ objectValue.key }}">{{ objectValue.key }}</div>
+                                                <div class="col-11 pr-0 default-value text-truncate" *ngIf="!objectValue.nested" title="{{ objectValue.value }}">{{ objectValue.value }}</div>
+                                                <div class="col-11 pr-0 default-value align-items-start text-truncate" *ngIf="objectValue.nested">                                                                                   
+                                                <div class="d-flex align-items-start text-truncate">
+                                                    <img class="pointer mr-2 mt-1" (click)="objectValue.expanded = !objectValue.expanded" *ngIf="objectValue.nested && !objectValue.expanded" src="assets/icons/structured-data/carrot-right.svg">
+                                                    <img class="pointer mr-2 mt-1" *ngIf="objectValue.nested && objectValue.expanded" (click)="objectValue.expanded = !objectValue.expanded" src="assets/icons/structured-data/carrot-down.svg">
+                                                    <pre *ngIf="objectValue.nested && objectValue.expanded">{{ objectValue.expandedValue | json }}</pre> 
+                                                    <div *ngIf="objectValue.nested && !objectValue.expanded" class="text-truncate">{{ objectValue.value }}</div>
+                                                </div>                                            
+                                                </div>                                        
+                                            </div>
+                                        </div>
+                                        <div class="mt-2 view-json col-12 p-0" *ngIf="data.objectLength > 5" (click)="editJson(data)">{{'structuredData.seeMore' | translate}}</div>
+                                    
+                                    </div>
+                                </ng-container>
+                                <!-- Commented for now -->
+                                <!-- <div class="toast-block">
+                                    <img src="assets/icons/green-check-circle.svg" class="successfullyIndex mr-2">
+                                    <span class="info-text">{{'structuredData.success_indexing' | translate}} </span>
+                                    <span class="index_data ml-2">{{'structuredData.index_data' | translate}}</span>
+                                    <img class="close-icon" src="assets/icons/modal-close.svg">
+                                </div> -->
+                                <div class="action-links">
+                                    <img src="assets/icons/edit-pencil.svg" (click)="editJson(data)" id="btn_edit_structured_data" placement="top-center" container='body' ngbTooltip="Edit" tooltipClass="ngb_tooltip_custom_class sampleJson">
+                                    <img src="assets/icons/delete-table.svg" (click)="deleteStructuredDataPopup(data)"  id="btn_delete_structured_data" placement="top-center" container='body' ngbTooltip="Delete" tooltipClass="ngb_tooltip_custom_class sampleJson">
                                 </div>
-                            </ng-container>
-                            <!-- Commented for now -->
-                            <!-- <div class="toast-block">
-                                <img src="assets/icons/green-check-circle.svg" class="successfullyIndex mr-2">
-                                <span class="info-text">{{'structuredData.success_indexing' | translate}} </span>
-                                <span class="index_data ml-2">{{'structuredData.index_data' | translate}}</span>
-                                <img class="close-icon" src="assets/icons/modal-close.svg">
+                                <!-- Commented for now -->
+                                <!-- <div class="info-link"><img src="assets/icons/info.svg"></div> -->
+                                <!-- <div class="indexing">
+                                    <button class="kr-sg-button-secondary btn_md">Index</button>
+                                </div> -->
+                                <!-- <div class="structured-data">
+                                <div class="kr-sg-checkbox d-block">
+                                    <input id="checkbox_drp2" class="checkbox-custom" type="checkbox">
+                                    <label for="checkbox_drp2" class="checkbox-custom-label"></label>
+                                </div>
+                                <div class="data-content">
+                                    To access Citibank Online as a first time user, you will need to create a User ID and Internet Password. You can create a User ID and Internet Password using the Debit Card for your Rupee Checking Account and the ATM Personal Identification Number.
+                                </div>
+                                <div class="action-links">
+                                    <img src="assets/icons/edit-pencil.svg" placement="top-center" container='body' ngbTooltip="Edit" tooltipClass="ngb_tooltip_custom_class sampleJson">
+                                    <img src="assets/icons/delete-table.svg" placement="top-center" container='body' ngbTooltip="Delete" tooltipClass="ngb_tooltip_custom_class sampleJson">
+                                </div>
+                                <div class="info-link"><img src="assets/icons/info.svg"></div>
                             </div> -->
-                            <div class="action-links">
-                                <img src="assets/icons/edit-pencil.svg" (click)="editJson(data)" id="btn_edit_structured_data" placement="top-center" container='body' ngbTooltip="Edit" tooltipClass="ngb_tooltip_custom_class sampleJson">
-                                <img src="assets/icons/delete-table.svg" (click)="deleteStructuredDataPopup(data)"  id="btn_delete_structured_data" placement="top-center" container='body' ngbTooltip="Delete" tooltipClass="ngb_tooltip_custom_class sampleJson">
-                            </div>
-                            <!-- Commented for now -->
-                            <!-- <div class="info-link"><img src="assets/icons/info.svg"></div> -->
-                            <!-- <div class="indexing">
-                                <button class="kr-sg-button-secondary btn_md">Index</button>
-                            </div> -->
-                            <!-- <div class="structured-data">
-                            <div class="kr-sg-checkbox d-block">
-                                <input id="checkbox_drp2" class="checkbox-custom" type="checkbox">
-                                <label for="checkbox_drp2" class="checkbox-custom-label"></label>
-                            </div>
-                            <div class="data-content">
-                                To access Citibank Online as a first time user, you will need to create a User ID and Internet Password. You can create a User ID and Internet Password using the Debit Card for your Rupee Checking Account and the ATM Personal Identification Number.
-                            </div>
-                            <div class="action-links">
-                                <img src="assets/icons/edit-pencil.svg" placement="top-center" container='body' ngbTooltip="Edit" tooltipClass="ngb_tooltip_custom_class sampleJson">
-                                <img src="assets/icons/delete-table.svg" placement="top-center" container='body' ngbTooltip="Delete" tooltipClass="ngb_tooltip_custom_class sampleJson">
-                            </div>
-                            <div class="info-link"><img src="assets/icons/info.svg"></div>
-                        </div> -->
-                    </div>
+                        </div>
+                </ng-container>
                 </div>
-                <app-record-pagination id="pagination_structured_data" class="pagination" [totalRecord]='totalCount' [limitpage]='20' (pageChanged)="paginate($event)"></app-record-pagination>
-            </ng-container>
+                <app-record-pagination *ngIf="structuredDataItemsList.length" id="pagination_structured_data" class="pagination" [totalRecord]='totalCount' [limitpage]='20' (pageChanged)="paginate($event)"></app-record-pagination>
             <!-- <div class="empty_records d-flex text-center col-12 row d-none" *ngIf="noItems">
                 <div class="col-12">
                     <img class="action_icon" src="assets/images/structured-data-empty.svg" >
