--- a/findly-builder/src/app/components/structured-data/structured-data.component.scss
+++ b/findly-builder/src/app/components/structured-data/structured-data.component.scss
@@ -152,7 +152,8 @@
                 font-weight: 600;
                 font-size: 10px;
                 line-height: 12px;
-                margin-right: 6px;
+                // margin-right: 6px;
+                text-transform: uppercase;
             }
             .filter-title{
                 color: #0D6EFD;
