--- a/findly-builder/src/app/components/result-ranking/result-ranking.component.html
+++ b/findly-builder/src/app/components/result-ranking/result-ranking.component.html
@@ -37,7 +37,7 @@
                             </div>
                         </div>
                         <div class ="info-div">
-                            <p>To add a customised query, click on the ball and select advance mode.</p>
+                            <p>To add a customized query, click on the ball and select customize mode.</p>
                             <p class="mt-7"> All the changes will be recorded here.</p>
                         </div>
                         <div class="body-content">
