--- a/findly-builder/src/app/components/add-structured-data/add-structured-data.component.scss
+++ b/findly-builder/src/app/components/add-structured-data/add-structured-data.component.scss
@@ -35,6 +35,7 @@
                 padding: 27px 25px;
                 text-align: center;
                 height: 332px;
+                position: relative;
                 .info_text{
                     color: #202124;
                     font-weight: normal;
@@ -49,6 +50,15 @@
                 }
                 .custom-file{
                     display: none;
+                }
+                .custom-file-input{
+                    // display: none;
+                    position: absolute;
+                    z-index: 2;
+                    width: 100%;
+                    height: 100%;
+                    margin: 0;
+                    opacity: 0;
                 }
                 .kr-sg-file-drag-drop{
                     width: 100%;
@@ -146,6 +156,8 @@
             text-decoration: none;
             line-height: 20px;
             cursor: pointer;
+            position: relative;
+            z-index: 99;
         }
     }
 }
@@ -224,3 +236,8 @@
         }
     }
 }   
+
+.kr-sg-file-drag-drop.w-100{
+    position: relative;
+    z-index: 99;
+}
