Result Ranking CSS - Changes

--- a/findly-builder/src/app/components/result-ranking/result-ranking.component.scss
+++ b/findly-builder/src/app/components/result-ranking/result-ranking.component.scss
@@ -80,7 +80,7 @@
             }
             .info-div {
                 p{ 
-                margin: 10px 45px;
+                margin: 10px 0px 10px 10px;
                 font-weight: 500;
                 font-size: 12px;
                 line-height: 15px;
