--- a/findly-builder/src/app/components/search-interface/search-interface.component.scss
+++ b/findly-builder/src/app/components/search-interface/search-interface.component.scss
@@ -305,5 +305,8 @@
             }
         }
     }
-
+    // .disable-url {
+    //     background: #eff0f1;
+    //     pointer-events: none;
+    // }
 }
